# deep_rapm

./: .gitignore  README.md  pyproject.toml  rolling_rapm.py
deep_rapm/: __init__.py  model.py  model_cross_rapm.py  model_linear.py  rapm.py  rolling.py  train.py
deep_rapm/scripts/: collect.py  collect_box_scores.py  collect_players.py  solve_rapm.py  train_script.py
docs/: incremental_rapm.md
tests/: conftest.py  test_dataset.py  test_incremental_rapm.py  test_players.py  test_possessions.py  test_sample_games.py
